# fuuka-bot

./: .gitignore  CHANGELOG.md  COMMANDS.md  Cargo.toml  Justfile  READMD.md  README.md  build.rs  cliff.toml  deny.toml  flake.nix  fuuka-bot.sample.toml  renovate.json  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: cliff.toml  renovate.json
.github/actions/: rustdoc.yml
.github/workflows/: build.yml  changelog.yml  ci.yml  deploy.yml  docs-deploy.yml  release.yml  rustdoc.yml
crates/crates-api/: Cargo.toml
crates/crates-api/src/: lib.rs
crates/fuuka-bot/: Cargo.toml
crates/fuuka-bot-events/: Cargo.toml
crates/fuuka-bot-events/src/: sticker.rs
crates/fuuka-bot/src/: command.rs  config.rs  events.rs  handler.rs  lib.rs  main.rs  media_proxy.rs  message.rs  traits.rs
crates/fuuka-bot/src/format/bilibili/: video.rs  video.text.jinja
crates/fuuka-bot/src/format/pixiv/: illust.html.jinja  illust.rs  illust.text.jinja
crates/fuuka-bot/src/matrix/: federation.rs  mod.rs
crates/fuuka-bot/src/message/: jerryxiao.rs  mod.rs
crates/fuuka-bot/src/message/command/: about.rs  bilibili.rs  bot.rs  hitokoto.rs  nixpkgs.rs  ping.rs  pixiv.rs  profile.rs  room_id.rs  rooms.rs  server.rs  unignore.rs
crates/fuuka-bot/src/message/nahida/: mod.rs
crates/fuuka-bot/src/message/nahida/extractors/: crates.rs  mod.rs  pixiv.rs
crates/fuuka-bot/src/scripts/: mkquote.sh
crates/fuuka-bot/src/services/: hitokoto.rs  mod.rs
crates/fuuka-bot/src/services/bilibili/: mod.rs  video.rs
crates/fuuka-bot/src/services/github/: mod.rs  models.rs
crates/fuuka-bot/src/services/github/graphql/: pull_info.graphql
crates/fuuka-bot/src/services/github/pr_tracker/: mod.rs
crates/fuuka-bot/src/services/pixiv/: illust.rs
crates/hitokoto-api/: Cargo.toml
crates/hitokoto-api/src/: lib.rs
crates/pixiv-ajax-api/: Cargo.toml
crates/pixiv-ajax-api/src/: common.rs  futures.rs  illust.rs  lib.rs  ranking.rs
crates/pixiv-ajax-api/src/serde/: dict_key_as_vec.rs  false_is_none.rs  from_str.rs  mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  at-nahida.md  commands.md  configuration.md  index.md
files/: fuuka-bot.html
fuuka-bot/: Cargo.toml
fuuka-bot-events/src/: sticker.rs
fuuka-bot/src/: command.rs  config.rs  de.rs  handler.rs  lib.rs  main.rs  member_changes.rs  stream.rs  traits.rs  types.rs
fuuka-bot/src/command/: info.rs  member_changes.rs  mod.rs  nixpkgs.rs  pixiv.rs  upload_sticker.rs
fuuka-bot/src/command/functions/: member_stream.rs  mod.rs  nixpkgs_pr.rs
fuuka-bot/src/dispatcher/: event.rs  handlers.rs  mod.rs  request.rs
fuuka-bot/src/dispatcher/handlers/: avatar_changes.rs  crazy_thursday.rs  help.rs  hitokoto.rs  ignore.rs  jerryxiao.rs  nahida.rs  name_changes.rs  nixpkgs.rs  ping.rs  pixiv.rs  remind.rs  room_id.rs  send_avatar.rs  unignore.rs  upload_sticker.rs
fuuka-bot/src/media_proxy/: mod.rs
fuuka-bot/src/message/: jerryxiao.rs  mod.rs
fuuka-bot/src/message/nahida/: link_type.rs  mod.rs
fuuka-bot/src/message/nahida/extractors/: bilibili.rs  crates.rs  generic.rs
fuuka-bot/src/services/: github.rs  mod.rs
fuuka-bot/tests/: config.rs
graphql/query/nixpkgs-pr/: Cargo.toml
graphql/query/nixpkgs-pr/src/: lib.rs
graphql/schema/github/: Cargo.toml  build.rs
graphql/schema/github/src/: lib.rs
src/: bot_commands.rs  callbacks.rs  command.rs  config.rs  dicer.rs  env.rs  handler.rs  jerryxiao.rs  layer.rs  lib.rs  main.rs  media_proxy.rs  member_changes.rs  member_updates.rs  message.rs  message_responses.rs  nahida.rs  quote.rs  session.rs  traits.rs  types.rs  utils.rs
src/command/: crazy_thursday.rs  info.rs  member_changes.rs  mod.rs  pixiv.rs  quote.rs  remind.rs  send_avatar.rs
src/command/functions/: member_stream.rs  mod.rs  nixpkgs_pr.rs  quote.rs
src/command/functions/graphql/: branches.graphql  pr-info.graphql
src/dispatcher/: handlers.rs  mod.rs  request.rs
src/dispatcher/handlers/: help.rs  hitokoto.rs  jerryxiao.rs  nahida.rs  nixpkgs.rs  ping.rs  pixiv.rs  profile.rs  room_id.rs  unignore.rs  user_id.rs
src/events/: mod.rs  sticker.rs
src/format/: mod.rs
src/format/bilibili/: video.html.jinja  video.rs
src/format/pixiv/: illust.rs
src/matrix/: mod.rs
src/matrix/streams/: membership.rs
src/message/: jerryxiao.rs  mod.rs
src/message/command/: bilibili.rs  bot.rs  delete.rs  help.rs  hitokoto.rs  ignore.rs  mod.rs  nixpkgs.rs  ping.rs  pixiv.rs  profile.rs  quote.rs  remind.rs  room_id.rs  rooms.rs  server.rs  unignore.rs  upload_sticker.rs  user_id.rs
src/message/nahida/: link_type.rs  mod.rs
src/message/nahida/extractors/: crates.rs  generic.rs  mod.rs  pixiv.rs
src/middleware/: cache.rs  mod.rs  reqwest.rs
src/render/: quote.rs
src/services/: crates.rs  github.rs  hitokoto.rs  mod.rs
src/services/bilibili/: video.rs
src/services/crates/: mod.rs
src/services/github/: mod.rs
src/services/github/nixpkgs_pr/: mod.rs  pull_branches.graphql  pull_branches.rs  pull_info.graphql  pull_info.rs
src/services/github/pr_tracker/: mod.rs  streams.rs
src/services/pixiv/: illust.rs  mod.rs
systemd/: fuuka-bot.service
tests/: config.rs
