[package]
name = "fuuka-bot"
license = "AGPL-3.0-or-later"
version = "0.4.7"
edition = "2024"
repository = "https://github.com/ShadowRZ/fuuka-bot"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
clap = { version = "4.5.57", features = ["derive"] }
crc32fast = "1.5.0"
cronchik = { version = "2.0.4", features = ["time", "serde"] }
fastrand = "2.3.0"
file-format = "0.28.0"
formatx = "0.2.4"
futures-util = "0.3.31"
graphql_client = { version = "0.16.0", default-features = false }
hmac = "0.12.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
imagesize = "0.14.0"
jose-jwk = { version = "0.1.2", default-features = false }
mime = "0.3.17"
minijinja = { version = "2.12.0", default-features = false, features = [
  "builtins",
  "serde",
  "std_collections",
  "loader",
  "speedups",
] }
octocrab = { version = "0.49.5", default-features = false, features = [
  "jwt-rust-crypto",
] }
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
regex = "1.12.2"
rpassword = { version = "7.4.0" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-bool = "0.1.4"
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
sha2 = "0.10.9"
shell-words = "1.1.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["macros", "formatting"] }
tl = "0.7.8"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.12"
tower = { version = "0.5.3", features = ["limit", "util"] }
tower-http = { version = "0.6.8", features = ["map-request-body", "map-response-body", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "parking_lot",
] }
url = { version = "2.5.7", features = ["serde"] }

[dependencies.matrix-sdk]
default-features = false
features = [
  "anyhow",
  "e2e-encryption",
  "automatic-room-key-forwarding",
  "sqlite",
  "federation-api",
]
git = "https://github.com/matrix-org/matrix-rust-sdk"

[dependencies.reqwest]
default-features = false
features = ["gzip", "brotli", "deflate", "json"]
version = "0.12.28"

[dependencies.pixrs]
default-features = false
git = "https://github.com/ShadowRZ/pixrs"
rev = "42294c35e4deacbf49f98374b767dfae29bb38ea"

[dependencies.ruma]
features = ["unstable-msc2545"]
git = "https://github.com/ruma/ruma"
rev = "289bee87974bd3c2ad14a6c15801c80b683b67dc"

[dev-dependencies]
html-compare-rs = "0.3.0"
pretty_assertions = "1.4.1"

[features]
default = ["rustls-tls"]
bundled-sqlite = ["matrix-sdk/bundled-sqlite"]

native-tls = ["reqwest/native-tls", "matrix-sdk/native-tls"]
rustls-tls = [
  "reqwest/rustls-tls",
  "matrix-sdk/rustls-tls",
  "reqwest/rustls-tls-native-roots",
]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
