[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.7"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
bytes = "1.11.0"
http = "1.4.0"
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["buffer", "limit", "util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"

[workspace.metadata.crane]
name = "fuuka-bot"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
