[package]
name = "fuuka-bot"
version = "0.2.9"
license = "Apache-2.0"
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
fuuka-bot-events = { workspace = true }
serde_json = "1"
crc32fast = "1"
thiserror = "1"
lol_html = "1"
shell-words = "1"
fastrand = "2"
rpassword = "7"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
zip = { version = "1", default-features = false, features = ["deflate"] }
imagesize = "0.12"
file-format = "0.24"
tokio-util = "0.7"
toml = "0.8"
async-stream = "0.3"
futures-util = "0.3"
html-escape = "0.2"
mime = "0.3"
ruma-html = "0.1"
envsubst = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["macros", "formatting"] }

[features]
bundled-sqlite = ["matrix-sdk/bundled-sqlite"]
