[package]
name = "fuuka-bot"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
repository = "https://github.com/ShadowRZ/fuuka-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["macros", "formatting"] }
cynic = { version = "3", features = ["http-reqwest", "rkyv"] }
cronchik = { version = "2", features = ["time", "serde"] }
anyhow = "1"
serde_json = "1"
crc32fast = "1"
thiserror = "1"
shell-words = "1"
fastrand = "2"
regex = "1"
tracing = "0.1"
imagesize = "0.13"
file-format = "0.25"
tokio-util = "0.7"
toml = "0.8"
async-stream = "0.3"
futures-util = "0.3"
mime = "0.3"
envsubst = "0.2"
tl = "0.7"
dptree = "0.3"
pin-project-lite = "0.2"
axum = "0.7"
jose-jwk = "0.1"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
rpassword = { version = "7", optional = true }

fuuka-bot-query-nixpkgs-pr = { version = "0.1.0", path = "../graphql/query/nixpkgs-pr" }

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = ["anyhow", "e2e-encryption", "automatic-room-key-forwarding", "sqlite"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["gzip", "brotli", "deflate", "json"]

[dependencies.ruma]
# Flattens with the features used by matrix-rust-sdk
git = "https://github.com/ruma/ruma"
rev = "26165b23fc2ae9928c5497a21db3d31f4b44cc2a"
features = ["events", "html", "federation-api-c"]

[dependencies.pixrs]
git = "https://github.com/ShadowRZ/pixrs"
default-features = false

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["native-tls"]
bundled-sqlite = ["matrix-sdk/bundled-sqlite"]
interactive-login = []
native-tls = ["reqwest/native-tls", "matrix-sdk/native-tls", "pixrs/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "matrix-sdk/rustls-tls", "pixrs/rustls-tls"]
rpassword = ["dep:rpassword"]
