[package]
name = "crates-api"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
futures-core.workspace = true
http.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
tower.workspace = true
