[package]
name = "hitokoto-api"
license = "MIT"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
tower.workspace = true
